# city_events

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  mongo_db.py  pyproject.toml  pytest.ini  requirements.txt
api/: __init__.py
api/achievement/v1/: achievement.py
api/chat/v1/: chat.py
api/comment/v1/: comment.py
api/event/v1/: event.py
api/health/: health.py
api/home/: home.py
api/user/v1/: user.py
app/: server.py
app/achievement/models/: achievement.py
app/achievement/schemas/: __init__.py  achievement.py
app/achievement/services/: __init__.py  achievement.py
app/chat/models/: models.py
app/chat/schemas/: schemas.py
app/chat/services/: consumers.py
app/comment/models/: comment.py
app/comment/schemas/: __init__.py  comment.py
app/comment/services/: comment.py
app/event/models/: event.py
app/event/schemas/: __init__.py  event.py
app/event/services/: event.py
app/user/models/: user.py
celery_app/: __init__.py
celery_app/tasks/: tasks.py
core/: config.py
core/db/: elastic_db.py  mongo_db.py  session.py
core/helpers/: redis.py
core/repository/: base.py
core/utils/: email_sender.py  password_hasher.py
docker/: docker-compose.yml
docker/api/: Dockerfile  startup.sh
logs/: elvis.json
migrations/: env.py
migrations/versions/: 0202d7d49002_init.py  05b7c5cfefd9_init.py  0713a2fd67e0_init.py  14f20c9ff3cb_init.py  1c131451613f_init.py  a40297f18dcc_init.py  c40873936b92_init.py  ca15941a4bba_init.py  d04aaf59cc55_init.py  dc2bc1054d6e_init.py
tests/: conftest.py  factories.py
(+14 files in other folders)
