[tool.poetry]
name = "city_events"
version = "0.1.0"
description = ""
authors = ["Blastz13 <sinicinr2003@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
motor = "3.1.1"
sqlalchemy = "2.0.5.post1"
alabaster = "0.7.13"
anyio = "3.6.2"
babel = "2.12.1"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
colorama = "0.4.6"
dnspython = "2.3.0"
docutils = "0.19"
idna = "3.4"
imagesize = "1.4.1"
importlib-metadata = "6.0.0"
jinja2 = "3.1.2"
livereload = "2.6.3"
markupsafe = "2.1.2"
packaging = "23.0"
pydantic = "1.10.5"
pygments = "2.14.0"
pyjwt = "2.6.0"
pymongo = "4.3.3"
requests = "2.28.2"
six = "1.16.0"
sniffio = "1.3.0"
snowballstemmer = "2.2.0"
sphinx = "6.1.3"
sphinx-autobuild = "2021.3.14"
sphinxcontrib-applehelp = "1.0.4"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "2.0.1"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.5"
tornado = "6.2"
typing-extensions = "4.5.0"
urllib3 = "1.26.14"
werkzeug = "2.2.3"
zipp = "3.15.0"
uvicorn = "^0.21.1"
psycopg2-binary = "^2.9.6"
fastapi = "0.95.1"
asyncpg = "^0.27.0"
ujson = "^5.7.0"
redis = "^4.5.4"
alembic = "^1.10.4"
geometry = "^0.0.23"
geoalchemy2 = "^0.13.2"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
